# qwenRAG

./: .dockerignore  .gitignore  Dockerfile  README.md  batch_generate.py  chatbot.py  dataloader.py  datatype.py  docker-compose.yml  document.py  environment.yml  lang.ipynb  pyproject.toml  rag.py  ragtype.py  recorder.py  requirements.txt  retriever.py  test.ipynb
.github/workflows/: python-app.yml
configs/: agent.yaml  eval.yaml
data/: result-demo.jsonl
eval/: eval_hotpotqa.py  eval_retrieval.py
results/: hotpotqa_scores.jsonl  hotpotqa_scores_cot.jsonl  predictions_dense.jsonl  predictions_minilm.jsonl  retrieval_scores.jsonl  test_dense.jsonl  test_prediction.jsonl  validation_dense.jsonl  validation_dense_no_chain_thought.jsonl  validation_qwen.jsonl  validation_sparse.jsonl  validation_static.jsonl
src/eval/: eval_hotpotqa.py  eval_retrieval.py
src/rag_agent/: batch_generate.py  chatbot.py  config.py  custom_bm25.py  dataloader.py  rag.py  retriever.py
